
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct SN_env {int ket; int c; int bra; int l; scalar_t__* S; int lb; int* p; scalar_t__* B; } ;


 int a_59 ;
 int a_60 ;
 int a_61 ;
 int a_62 ;
 int eq_s_b (struct SN_env*,int,int ) ;
 int find_among_b (struct SN_env*,int ,int) ;
 int insert_v (struct SN_env*,int,int,scalar_t__) ;
 int s_100 ;
 int s_101 ;
 int s_98 ;
 int s_99 ;
 int slice_del (struct SN_env*) ;
 int slice_from_s (struct SN_env*,int,int ) ;
 void* slice_to (struct SN_env*,scalar_t__) ;

__attribute__((used)) static int r_step5i(struct SN_env * z) {
    z->ket = z->c;
    if (!(find_among_b(z, a_62, 3))) return 0;
    z->bra = z->c;
    { int ret = slice_del(z);
        if (ret < 0) return ret;
    }
    z->B[0] = 0;
    { int m1 = z->l - z->c; (void)m1;
        z->ket = z->c;
        if (!(eq_s_b(z, 8, s_98))) goto lab1;
        z->bra = z->c;
        z->S[0] = slice_to(z, z->S[0]);
        if (z->S[0] == 0) return -1;
        { int ret = slice_from_s(z, 4, s_99);
            if (ret < 0) return ret;
        }
        { int ret;
            { int saved_c = z->c;
                ret = insert_v(z, z->c, z->c, z->S[0]);
                z->c = saved_c;
            }
            if (ret < 0) return ret;
        }
        goto lab0;
    lab1:
        z->c = z->l - m1;
        { int m2 = z->l - z->c; (void)m2;
            z->ket = z->c;
            if (z->c - 5 <= z->lb || (z->p[z->c - 1] != 134 && z->p[z->c - 1] != 135)) goto lab2;
            if (!(find_among_b(z, a_59, 2))) goto lab2;
            z->bra = z->c;
            return 0;
        lab2:
            z->c = z->l - m2;
        }
        { int m3 = z->l - z->c; (void)m3;
            z->ket = z->c;
            if (!(find_among_b(z, a_60, 10))) goto lab4;
            z->bra = z->c;
            z->S[0] = slice_to(z, z->S[0]);
            if (z->S[0] == 0) return -1;
            { int ret = slice_from_s(z, 4, s_100);
                if (ret < 0) return ret;
            }
            { int ret;
                { int saved_c = z->c;
                    ret = insert_v(z, z->c, z->c, z->S[0]);
                    z->c = saved_c;
                }
                if (ret < 0) return ret;
            }
            goto lab3;
        lab4:
            z->c = z->l - m3;
            z->ket = z->c;
            if (!(find_among_b(z, a_61, 44))) return 0;
            z->bra = z->c;
            if (z->c > z->lb) return 0;
            z->S[0] = slice_to(z, z->S[0]);
            if (z->S[0] == 0) return -1;
            { int ret = slice_from_s(z, 4, s_101);
                if (ret < 0) return ret;
            }
            { int ret;
                { int saved_c = z->c;
                    ret = insert_v(z, z->c, z->c, z->S[0]);
                    z->c = saved_c;
                }
                if (ret < 0) return ret;
            }
        }
    lab3:
        ;
    }
lab0:
    return 1;
}
